--- a/lcomernbootcamp/projbackend/package.json
+++ b/lcomernbootcamp/projbackend/package.json
@@ -15,8 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
-    "express-jwt": "^5.3.1",
-    "express-validator": "^6.2.0",
+    "express-jwt": "^5.3.3",
+    "express-validator": "^6.14.3",
     "formidable": "^1.2.1",
     "i": "^0.3.6",
     "jsonwebtoken": "^8.5.1",
@@ -25,6 +25,7 @@
     "morgan": "^1.9.1",
     "nodemon": "^1.19.4",
     "npm": "^6.13.0",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "uuidv4": "^6.2.13"
   }
 }
